src/main/java/com/example/vmrentalrest/exceptions/invalidParametersExceptions/InvalidRentException.java
package com.example.vmrentalrest.exceptions.invalidParametersExceptions;

public class InvalidRentException extends InvalidParametersException {
    public InvalidRentException() {
        super("Invalid rent");
    }
}
